Fixed overflow in blogpost texts

--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -430,6 +430,7 @@ button {
     color: #000;
     margin-bottom: 25px;
     line-height: 35px;
+    word-break: break-word;
   }
 
   & a {
